--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,13 @@
-streamlit==1.32.0
-pandas==2.1.4
-pinecone-client==3.0.2
-requests==2.31.0
-beautifulsoup4==4.12.2
-langchain==0.1.6
-langchain-huggingface==0.0.2
-langchain-ollama==0.0.1
-ollama==0.1.5
-sec-edgar-api==3.0.1
-plotly==5.18.0
-altair==5.2.0
-prettytable==3.9.0
-sentence-transformers==2.5.1
-uuid==1.30
-tqdm==4.66.1
-typing-extensions==4.9.0
-python-dotenv==1.0.0
+streamlit
+langchain
+bs4
+requests
+pandas
+numpy
+prettytable
+plotly
+huggingface_hub
+sentence-transformers
+faiss-cpu
+sec-edgar-downloader
+sec-edgar-api
