--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
+langchain>=0.1.6
 streamlit
-langchain
-bs4
-requests
+sentence-transformers
+huggingface-hub
+faiss-cpu
+beautifulsoup4
 pandas
 numpy
-prettytable
 plotly
-huggingface_hub
-sentence-transformers
-faiss-cpu
-sec-edgar-downloader
+prettytable
 sec-edgar-api
