--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ huggingface_hub
 sentence-transformers
 faiss-cpu
 sec-edgar-downloader
+git+https://github.com/mahenrique94/sec-edgar-api.git@main#egg=sec-edgar-api
