--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,4 @@ langchain-ollama
 huggingface_hub
 sentence-transformers
 faiss-cpu
-sec-edgar-downloader
-git+https://github.com/mahenrique94/sec-edgar-api.git@main#egg=sec-edgar-api
+edgar-tool==1.3.3
